--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div class="footer-boxes">
                     <div class="first-box">
-                        <img src="slider1-img1-1-1.png" width="300px" alt="">
+                        <img src="images/slider1-img1-1-1.png" width="300px" alt="">
 
                         <h3>Home Security System</h3>
                         <p>Protect your home, your business and your well-being with
@@ -86,7 +86,7 @@
                              Take A Tour<i class="fa-solid fa-arrow-right" style="padding-left: 10px;"></i> </a>
                     </div>
                     <div class="first-box">
-                        <img src="portfolio6.jpg" alt="" width="350px" style="margin-bottom: 40px;">
+                        <img src="images/portfolio6.jpg" alt="" width="350px" style="margin-bottom: 40px;">
 
                         <h3>Electronics components</h3>
 
